# Maple

./: .gitignore  README.md  docker-compose.yml  hackathon_roadmap.md  pyproject.toml  review-test.txt
.github/workflows/: telegram-commits.yml  telegram.yml
data/: dataset_ts.jsonl  dataset_ts_sweep.jsonl  dataset_v2.jsonl  index_request_sample.json
docs/: 00_roadmap.md  01_architecture.md  02_index_deep_dive.md  03_search_deep_dive.md  04_data_flow.md  05_qdrant_and_retrieval.md  06_tuning_and_eval.md  07_ops_and_deploy.md  08_defense_cheatsheet.md  09_glossary.md  10_demo_script.md  11_experiments.md  12_limitations.md  api.md  autoresearch.md  eval-harness.md  index_service.md  local_development.md  ml-roadmap.md  ml_description.md  pipeline-diagram-prompt.md  process.md  search_service.md
eval/: ingest.py  metrics.py  requirements.txt  run.py
index/: Dockerfile  Makefile  chunking.py  config.py  content_builders.py  main.py  message_processing.py  pipeline.py  requirements.txt  schemas.py  sparse.py
scripts/: ab_qdrant.py  build_ts_chat.py  chunking_diagnostic.py  chunking_parity.py  sweep_chunking.py
search/: Dockerfile  Makefile  config.py  main.py  pipeline.py  querying.py  requirements.txt  schemas.py
