[project]
name = "hackathon-search-engine"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "B904", # Allow raising exceptions without from e, for HTTPException,
    "RUF001",
    "D10", # docstring missing,
    "EXE002",
    "D203",
    "D213",
    "COM812",
    "FBT",
    "ANN",
    "BLE001",
    "RUF002", # ambiguous unicode in Russian docstrings (false positives)
    "RUF003", # ambiguous unicode in Russian comments (false positives)
]

[tool.ruff.lint.per-file-ignores]
# eval/* — CLI-скрипты, print и длинные сообщения в исключениях уместны
"eval/*" = [
    "T201",   # print
    "INP001", # missing __init__.py
    "TRY003", # long exception messages
    "EM101",  # raw string in exception
    "EM102",  # f-string in exception
    "S101",   # assert
    "PLC0415", # import outside top-level
    "PERF401", # manual list comprehension
    "ARG001", # unused function argument
    "SIM103", # needless bool
    "RET504", # unnecessary assign
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
